--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739288.md#1" target="_blank">留美女生：回中国工作遭红三代持枪强奸</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/23/n11739288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2d9060b681c71_ttl7dayhAp_W6-150x120.jpg" align ="left"></a>在强忍了一年多的时间后，28岁的大陆留学生W小姐在美国向媒体披露：她在大陆工作期间，曾遭公司董事长赵磊拿枪威胁、强奸以致怀孕、堕胎的经历。而强奸她的赵磊自称拥有超强红色背景，是被称为中共“延安五老”之一的谢觉哉和其第二任妻子王定国的外孙、即王定国长女谢宏的儿子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739193.md#1" target="_blank">陆最大农商行成最惨新股  两月蒸发380亿</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1011131302022320-150x120.jpg" align ="left"></a>大陆最大的农商行——重庆农商行上市两个月市值蒸发近400亿元，连续经历破净、破发，被称为“2019年最惨新股”。今年七只银行股新股均表现不佳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739131.md#1" target="_blank">学者：中共通过严密的监控扼杀了公民社会</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-55815023-150x120.jpg" align ="left"></a>那些倡导跟中共“接触”的人认为，“接触”可以促进中国民主化进程。但是即便这种假说成立，民主运动也需要公民社会的存在。但不幸的是，中共通过严密的监控系统扼杀了公民社会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739021.md#1" target="_blank">北京二手房价连跌6个月 现300万降幅</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739021.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/501e769e61b39022614b347fe64f3270-150x120.jpg" align ="left"></a>北京二手住宅价格连续6个月下跌，被称为北京二手房市场的最长下滑周期，有的二手住宅直接砍掉300万元成交，名校学区房也开始出现百万降幅。
 
 大陆媒体12月22日报导，12月1日至19日的统计数据显示，北京二手住宅价格在每平方米5.4万元（人民币，下同）左右，与今年最高点相比下降了4150元。
@@ -25,9 +28,8 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737939.md#1" target="_blank">川普：美中将很快签署第一阶段贸易协议</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737939.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/01-trump-june27-Samira-Bouaou.jpg-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周六（12月21日）表示，美国和中国将“很快”签署第一阶段贸易协议。商务部长罗斯则表示，这是一份首次拥有执行机制的协议，若中方不遵守协议内容，且协商结果不满意，美方可单方面采取回应措施，包括加征关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 6:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738000.md#1" target="_blank">广州楼市5年最差 三区放开限购</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738000.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/1405282254551944-600x400-150x120.jpg" align ="left"></a>12月20日，广州市黄埔区发布通知放开楼市限购，这已经是广州第三个区在12月份放开楼市限购。有分析认为这和广州楼市下滑有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 5:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737972.md#1" target="_blank">“难”“稳”——2019大陆汉字透中共困境</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737972.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912190911522188-150x120.jpg" align ="left"></a>网民票选出国内字“稳”、国际字“难”，分别代表中国面对的内外情势。这二字其实反映了中共所处的困境：求稳不得，难题无解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737795.md#1" target="_blank">酒鬼酒再曝丑闻 非法添加甜蜜素 背后涉央企</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737795.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-97626451-150x120.jpg" align ="left"></a>中共央企旗下的酒鬼酒此前曾曝出塑化剂含量严重超标，这家被质检总局“保护”下的酒厂近日再曝丑闻，其代理商在数万余瓶酒鬼酒中抽检出明令禁止添加的甜蜜素。更为恶劣的是，据该酒厂前员工披露，为提高酒鬼酒“品质”，早在10年前就开始非法添加这种合成剂了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737694.md#1" target="_blank">大陆村民：天然气太贵烧不起 冬天难熬</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg" align ="left"></a>据《新京报》12月19日报导，山西省临汾市洪洞县大槐树镇南营村村干部，大约一周前，开始挨家挨户封堵煤炉。如果家里没人，村干部就翻墙进村民家里，“强制给炉子堵上”。多名山西村民也向大纪元记者反馈，烧天然气太贵了，村民们根本烧不起，家里冷得不行，村干部还把炉灶给封了，“村民心里肯定接受不了”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 8:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737713.md#1" target="_blank">路透：中纪委多年前幕后推动引渡条例</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190617233359100484-600x400-150x120.jpg" align ="left"></a>港府修订《逃犯条例》（也称引渡条例），引爆“反送中”抗议活动。尽管林郑月娥坚称，她自己而非北京是修例的主要推动者。但路透社的调查披露了一个更为复杂的故事，中共中纪委早在多年前就在背后推动建立引渡法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11739024.md#1" target="_blank">传中共红三代涉持枪强奸下属 警方不调查</a><br></h3>父亲是河南一家大型央企的负责人，中学后赴美留学，归国后经引荐进入一家名为“美好世界航空集团”的公司，未想却遭遇一场恶梦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738747.md#1" target="_blank">密山市委前副书记李连春回国投案 被起诉</a><br></h3>近日，中共媒体报导，2019年9月24日，外逃职务犯罪嫌疑人李连春主动回国投案，并已退出大部分贪污所得赃款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 3:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738464.md#1" target="_blank">内蒙古赤峰至少31名法轮功学员身陷囹圄</a><br></h3>2019年年末，赤峰地区至少有30名法轮功学员被非法关押在内蒙古赤峰第四监狱和内蒙古呼市女子监狱遭受迫害，还有一人不知被转到哪所监狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738510.md#1" target="_blank">武汉南湖佰港城商场 一外卖员刺死商场员工</a><br></h3>12月22日下午2时许，武汉洪山区一商场内，一名身穿外卖服装的男子将一商场员工刺死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:29 PM							</td></tr>
@@ -44,7 +46,5 @@
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738135.md#1" target="_blank">久坐玩手机每天吃汉堡 扬州男童患重度脂肪肝</a><br></h3>近日，江苏扬州9岁男童优优（化名）因肺炎就医。医生注意到，优优的体重竟有120斤，一检查，发现他还患上了重度脂肪肝。原来，优优爱玩手机，经常久坐不动，还每天吃汉堡喝饮料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11738059.md#1" target="_blank">沪男子图好玩点燃杨絮 烧毁3770万财产</a><br></h3>今年5月，上海青浦39岁男子汪某出于好玩，用打火机点燃一堆白杨絮。白杨絮起火后引燃一旁的塑料废品等可燃物，火势蔓延到邻近的一家公司内，使该公司冷库着火烧毁。此次事故造成直接经济损失超3770万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737928.md#1" target="_blank">又一求救信 英女孩圣诞卡惊现上海囚犯信息</a><br></h3>圣诞节将至，一位英国女孩在乐购（Tesco）的慈善圣诞卡上发现一则求救信息，是来自上海青浦监狱里的一些外国囚犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/22/n11737991.md#1" target="_blank">每日三退声明精选（2019/12/21）</a><br></h3>我因为在去年P2P的金融灾难中，已经倾家荡产，无法生活。那位诈骗犯逃到美国一年多了，我们向各级政府反映问题，要求惩办诈骗犯。结果政府和黑警却抓捕、殴打、恐吓、关押维权的受害者，我们过着生不如死的日子，天下之大怎么就没有说理的地方呢？在反思过程中终于醒悟，我们全国3.2亿的金融灾民被诈骗的原因就是我们太相信政府和大裤衩的新闻，以至于我们误判了国内的经济状况，其.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
